# codemiscs

./: .gitignore  AUTHORS  ChangeLog  ColorizeInput.demo  ColorizeInput.md  Command.demo  Command.md  Images.demo  Images.md  Main.md  MakeProject.demo  MakeProject.md  Makefile.am  Mythes.demo  Mythes.md  NEWS  NOTES  PAYMENTS  Plan  ProjectHome.md  README  ReadFeed.demo  ReadFeed.md  SUPPORT  ShellShow.demo  ShellShow.md  SideBar.md  StatusReport.demo  StatusReport.md  ToneBeep.demo  ToneBeep.md  TranslateWord.demo  TranslateWord.md  Typewrite.demo  Typewrite.md  configure.ac  generate
cmd/: Makefile.am  cmd.in  cmd.in.sh  cmd.sh  testcmd.in  testcmdsh.in
cmd/cmd/: cmd.in  cmd.in.sh  testcmd.in  testcmdsh.in
cmd/colorize/: colorize.in.sh
cmd/imgs/: Makefile.am  imgs.in.sh
cmd/mkproject/: mkproject.in.sh
cmd/mkproject/skeletons/: c++.sh  c.sh  python.sh
cmd/pack/: Makefile.am  pack.in.sh
cmd/rf/: feeds  rf.in.sh
cmd/show/: Makefile.am  show.in.sh
cmd/show/shows/: ants.sh  beeper.sh  box.sh  clock.sh  mandelbrot.sh  pipes.sh  weave.sh
cmd/tw/: Makefile.am  mythes.cxx  mythes.in.sh  tw-config-klipper  tw.in.sh
cmd/tw/Language Station/: README  define  lenguaje  pronounce  pronuncia  traduce  translate
cmd/tw/LanguageStation/: comprueba  language
cmd/tw/dicts/: en-ar.twd
cmd/tw/engines/: tw_cache.sh  tw_ft.sh  tw_gt.sh  tw_local.sh  tw_share.sh  tw_yb.sh
cmd/typewrite/: Makefile.am  typewrite.in.sh
cmds/: Makefile.am
cmds/cmd/: Makefile.am  cmd.in  cmd.in.sh  testcmd.in  testcmdsh.in
cmds/colorize/: colorize.in.sh
cmds/imgs/: imgs.in.sh
cmds/mkproject/: Makefile.am  mkproject.in.sh  mps.sh
cmds/pack/: pack.in.sh
cmds/rf/: feeds  rf.in.sh
cmds/show/: Makefile.am  show.in.sh
cmds/show/shows/: beeper-midi.py  cookie.sh  matrix.sh
cmds/status/: Makefile.am  status.in.sh
cmds/tmp/: capture  powerstatus
cmds/tonize/: Makefile.am  tonize.in.sh
cmds/tw/: mythes-list  mythes.in.sh  tw-config-gtw.in.sh  tw-config-klipper.in.sh  tw.in.sh
cmds/tw/LanguageStation/: spell
cmds/tw/engines/: tw_cache.sh  tw_gt.sh  tw_local.sh  tw_share.sh  tw_yb.sh
cmds/typewrite/: typewrite.in.sh
colorize/: Makefile.am  colorize.in.sh
data/: Makefile.am
data/dicts/: ar-en.twd  es-en.twd
doc/: Makefile.am  cmd.in.man  colorize.in.man  demo  gen.sh  generate  imgs.in.man  mkproject.in.man  mythes.in.man  mythes.man  rf.in.man  show.in.man  status.in.man  tonize.in.man  tw.in.man  typewrite.in.man  typewriter.in.man  xbindkeysrc
doc/stage1/: engenv.sh  klipperrc  rf-gnome  tune
doc/stage2/: color.sh  language.sh  power.sh  runcmd.sh  show.sh  status.sh
images/: image-fortune  images-fetch-google  images-fortune  images-slideshow  images-unify
imgs/: Makefile.am  imgs-fetch-google.in.sh  imgs-fortune.in.sh  imgs-slideshow.in.sh  imgs-unify.in.sh  imgs.in.sh
mkproject/: Makefile.am  mkproject.in.sh  mps.sh
mkproject/skeletons/: bash.sh  c++-lib.sh  c-lib.sh  perl.sh
rf/: Makefile.am  rf.in.sh
shots/: Tricks  crop  cropshow  imgs-custom  plus
show/: Makefile.am  show.in.sh
tw/: Makefile.am  dicts  mythes.cxx  mythes.in.sh  tw-config-gtw  tw.in.sh  tw_mythes.sh
tw/dicts/: en-es.twd
tw/engines/: tw_local.sh
typewriter/: Makefile.am  typewriter.in.sh
